[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B']
ignore = ['E501', 'E701']

[tool.pyright]
include = ['src']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[project]
name = "recommence"
version = "0.0.0"
description = ""
authors = [
    {name = "Andy Patterson", email = "andrew.patterson@amii.ca"},
]
dependencies = [
    "numpy>=1.20,<=2.1.2",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pip",
    "ruff",
    "pytest",
    "pytest-cov",
    "pyright",
    "commitizen",
    "pre-commit",
    "PyExpUtils-andnp~=8.1",
    "replaytables-andnp~=7.0",
    "rlglue-andnp~=1.0",
    "PyFixedReps-andnp~=4.0",
    "gymnasium",
    "numba",
    "jax",
    "torch",
]
